update identity service